# modelverse

./: .gitignore  CONTRIBUTING.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/compute/: estimator.py
backend/app/edit/: engine.py
backend/app/llm/: brain.py  tools.py
backend/app/models/: api.py  ir.py
backend/app/resolvers/: arch_parser.py  autoconfig_mapper.py  hf_fetcher.py  llm_parser.py  llm_verifier.py  multimodal_llm_parser.py  prebaked.py  router.py  tensor_arch_mapper.py
backend/app/resolvers/file_parser/: __init__.py
data/prebaked/: bert-base-uncased.json  distilbert-base-uncased.json  gpt2.json  meta-llama--Llama-3.1-8B.json  mistralai--Mistral-7B-v0.1.json  t5-base.json
docs/: design_doc.md  work_sofar.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: SearchBar.tsx  TaskSwitcher.tsx
frontend/src/components/graph/: ArchGraph.tsx  ArchGraphClient.tsx  GraphLayout.ts
frontend/src/components/graph/edges/: ResidualEdge.tsx
frontend/src/components/graph/nodes/: BlockNode.tsx  RepeatLabelNode.tsx
frontend/src/components/layout/: ResizablePanel.tsx
frontend/src/components/panels/: ChatPanel.tsx  ComputeBar.tsx  DetailPanel.tsx
frontend/src/lib/: api.ts  formulas.ts  hardware.ts  ir.ts  store.ts  taskHeads.ts  utils.ts
