[project]
name = "modelverse-backend"
version = "0.1.0"
description = "ModelVerse backend — Architecture Reasoning Engine API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.85.0",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.7.1",
    "openai>=2.29.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.22",
]
